feat: Add map.polyfill with kakaomap api

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Lit Starter Kit</title>
   </head>
   <body>
-    <script type="text/javascript">
-      window.location.href = '/out/'
-    </script>
-    <a href="/out/">If the page doesn't redirect you, move directly.</a>
+    <a href="/dev/index.html">Component Demo</a>
   </body>
 </html>
