--- a/dev/index.html
+++ b/dev/index.html
@@ -4,9 +4,13 @@
   <head>
     <meta charset="utf-8" />
     <title>&lt;my-element> Demo</title>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=00b619a00bcee1f2b65b81fee4fb7420&libraries=services,clusterer,drawing"></script>
+
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../node_modules/lit/polyfill-support.js"></script>
-    <script type="module" src="../my-element.js"></script>
+    <script type="module" src="../out/elements/my-element.js"></script>
+    <script type="module" src="../out/elements/map.polyfill.js"></script>
+
     <style>
       p {
         border: solid 1px blue;
@@ -18,5 +22,6 @@
     <my-element>
       <p>This is child content</p>
     </my-element>
+    <map-wrapper></map-wrapper>
   </body>
 </html>
