feat: Add geolocation tracer

--- a/dev/index.html
+++ b/dev/index.html
@@ -12,7 +12,8 @@
     <script type="module" src="../out/elements/my-element.js"></script>
     <script type="module" src="../out/elements/map.naver.js"></script>
     <script type="module" src="../out/definitions/pathway.geometry.js"></script>
-
+    <script type="module" src="../out/GeoLocationController.js"></script>
+    
     <style>
       p {
         border: solid 1px blue;
