feat: Change function call

--- a/dev/index.html
+++ b/dev/index.html
@@ -41,7 +41,7 @@
         },
       }
       window.onload = () => {
-        document.querySelector('map-wrapper-naver').addPath(pathways.__TESTCASE1__.name, pathways.__TESTCASE1__.data)
+        document.querySelector('map-wrapper-naver').setPath(pathways.__TESTCASE1__.name, pathways.__TESTCASE1__.data)
       }
       
     </script>
